# twlnandtool

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGMP.cmake
source/: command_firmware.cpp  command_modcrypt.cpp  command_nandcrypt.cpp  command_syslog.cpp  commands.hpp  defines.hpp  ffcustom.h  main.cpp  twl_nand_reader.cpp  twl_nand_reader.hpp  types.hpp
source/crypto/: crypto_aes.cpp  crypto_aes.hpp  crypto_crc.hpp  crypto_rsa.cpp  crypto_rsa.hpp  crypto_sha.cpp  crypto_sha.hpp  crypto_twl.hpp  crypto_twl_key_constants.hpp  crypto_twl_keyscrambler.hpp
source/util/: util_bitutil.hpp  util_bound_checks.hpp  util_c_stdlib_funcs.c  util_c_stdlib_funcs.hpp  util_fileutil.cpp  util_fileutil.hpp  util_passkey.hpp
